--- a/Raiso.csproj
+++ b/Raiso.csproj
@@ -92,8 +92,8 @@
     <Content Include="View\HomePage.aspx" />
     <Content Include="View\LoginPage.aspx" />
     <Content Include="View\RegisterPage.aspx" />
-    <Content Include="View\Style\Login.css" />
     <Content Include="View\Style\Home.css" />
+    <Content Include="View\Style\LoginResgister.css" />
     <Content Include="View\Style\Style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
