--- a/Raiso.csproj
+++ b/Raiso.csproj
@@ -90,7 +90,7 @@
       <LastGenOutput>RAisoDatabaseEntity.cs</LastGenOutput>
     </Content>
     <Content Include="View\Admin\AdminPage.aspx" />
-    <Content Include="View\CustomerPage.aspx" />
+    <Content Include="View\Customer\CustomerPage.aspx" />
     <Content Include="View\HomePage.aspx" />
     <Content Include="View\LoginPage.aspx" />
     <Content Include="View\RegisterPage.aspx" />
@@ -139,11 +139,11 @@
     <Compile Include="View\Admin\AdminPage.aspx.designer.cs">
       <DependentUpon>AdminPage.aspx</DependentUpon>
     </Compile>
-    <Compile Include="View\CustomerPage.aspx.cs">
+    <Compile Include="View\Customer\CustomerPage.aspx.cs">
       <DependentUpon>CustomerPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="View\CustomerPage.aspx.designer.cs">
+    <Compile Include="View\Customer\CustomerPage.aspx.designer.cs">
       <DependentUpon>CustomerPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="View\HomePage.aspx.cs">
@@ -185,9 +185,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="View\Customer\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
